# outlook-daily-digest

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
scripts/: gmail_oauth_cleanup.py  test_gmail_readonly.py
src/gmail_subscription_cleanup/: __init__.py  __main__.py  config.py  gmail_auth.py  inbox_reader.py  report_generator.py  subscription_analyzer.py
src/outlook_daily_digest/: __init__.py  __main__.py  calendar_reader.py  config.py  graph_auth.py  graph_client.py  inbox_reader.py  report_generator.py
tests/: test_config.py  test_readers.py  test_report_generator.py  test_subscription_analyzer.py
