[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-daily-digest"
version = "0.1.0"
description = "Read-only Outlook inbox and calendar digest generator."
requires-python = ">=3.9"
dependencies = [
    "msal>=1.28.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.scripts]
outlook-daily-digest = "outlook_daily_digest.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
