[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-subscription-cleanup"
version = "0.1.0"
description = "Read-only Gmail subscription cleanup report generator."
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
gmail-subscription-cleanup = "gmail_subscription_cleanup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
